# OpenGLProject

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  README.md  package.sh
configuration/: root_directory.h.in
includes/learnopengl/: filesystem.h
resources/objects/PetrolTank/: PetrolTank.mtl
resources/objects/e30/: e30.mtl
resources/objects/fuel/: fuel.mtl
resources/objects/nitro/: nitro.mtl
resources/objects/pickup/: pickup.mtl
resources/objects/police_car/: police_car.mtl
src/game_project/: callbacks.cpp  car.cpp  car.h  controls.h  icon.fs  icon.vs  input.cpp  input.h  main.cpp  model_loading.cpp  physics.cpp  physics.h  ui.vs
src/game_project/core/: callbacks.h  car.cpp  car.h  collectible.cpp  collectible.h  controls.h
src/game_project/input/: input.cpp  input.h
src/game_project/physics/: PhysicsWorld.cpp  PhysicsWorld.h  physics.cpp  physics.h
src/game_project/scene/: Terrain.cpp  Terrain.h  scene.cpp  scene.h
src/game_project/ui/: GameUI.cpp  GameUI.h
